--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "server of Go Sneaker",
     "main": "index.js",
+    "engines": {
+        "node": "18.x"
+    },
     "scripts": {
         "start": "node index.js",
         "server": "nodemon index.js",
